--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Preferences</title>
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Include jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Include jQuery UI -->
@@ -103,7 +103,7 @@
         <h2>User Preferences</h2>
         <form action="/postUserPreferences" method="post"> <!-- New form for adding user preferences -->
             <label for="username">Username :</label>
-            <select id="username" name="username[]" multiple required class="chosen-select" data-placeholder="SELECT A FUCKING USERNAME">
+            <select id="username" name="username" required class="chosen-select" data-placeholder="Select a username...">
                 <!-- Options will be populated dynamically -->
             </select>
             <label for="favoriteArtists">Favorite Artists :</label>
@@ -137,29 +137,36 @@
         $(document).ready(function(){
             $('.chosen-select').chosen();
 
-        // Populate the username dropdown
-        // Define an array to hold the usernames
-        var usernames = [];
+        // Function to populate the username dropdown
+        function populateUsernameDropdown(usernames) {
+            // Clear existing options
+            $('#username').empty();
+            
+            // Populate the select dropdown with usernames
+            usernames.forEach(function(username) {
+                $('#username').append('<option value="' + username + '">' + username + '</option>');
+            });
 
-        $.ajax({
-            url: '/getUsers',
-            type: 'GET',
-            success: function(data) {
-                data.forEach(function(user) {
-                    usernames.push(user.username);
-                });
-                console.log('Usernames fetched successfully:', usernames);
+            // Trigger chosen:updated event after dynamically adding options
+            $('#username').trigger('chosen:updated');
+        }
 
-                // Initialize autocomplete
-                $('#username').autocomplete({
-                    source: usernames
-                });
-                console.log('Autocomplete initialized with usernames:', usernames);
-            },
-            error: function(xhr, status, error) {
-                console.error('Error fetching usernames:', error);
-            }
-        });
+    // Fetch usernames
+    $.ajax({
+        url: '/getUsers',
+        type: 'GET',
+        success: function(data) {
+            var usernames = data.map(function(user) {
+                return user.username;
+            });
+            console.log('Usernames fetched successfully:', usernames);
+            populateUsernameDropdown(usernames);
+        },
+        error: function(xhr, status, error) {
+            console.error('Error fetching usernames:', error);
+        }
+    });
+
 
 
         // Populate the artist dropdown
