--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Music Preferences</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="form.css">
     <!-- Include jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Include jQuery UI -->
@@ -18,7 +18,7 @@
         <h2>Add User</h2>
         <form action="/postUser" method="post"> <!-- Update action to "/postUser" for user submission -->
             <label for="username">Username :</label>
-            <input type="text" id="username" name="username" required>
+            <input type="text" id="usernameo" name="usernameo" required>
             <label for="email">Email :</label>
             <input type="email" id="email" name="email" required>
             <button type="submit">Submit</button>
@@ -141,6 +141,7 @@
         function populateUsernameDropdown(usernames) {
             // Clear existing options
             $('#username').empty();
+            //console.log('Usernames fetched successfully:', usernames);
             
             // Populate the select dropdown with usernames
             usernames.forEach(function(username) {
@@ -159,7 +160,7 @@
             var usernames = data.map(function(user) {
                 return user.username;
             });
-            console.log('Usernames fetched successfully:', usernames);
+           
             populateUsernameDropdown(usernames);
         },
         error: function(xhr, status, error) {
@@ -175,7 +176,7 @@
             type: 'GET',
             success: function(data) {
                 data.forEach(function(artist) {
-                    $('#artist').append('<option value="' + artist._id + '">' + artist.artistName + '</option>');
+                    //$('#artist').append('<option value="' + artist._id + '">' + artist.artistName + '</option>');
                 });
                 // Trigger chosen:update event after dynamically adding options
                 $('#artist').trigger('chosen:updated');
