--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
     <div class="container">
         <h2>Add User</h2>
         <form action="/postUser" method="post"> <!-- Update action to "/postUser" for user submission -->
-            <label for="username">Username :</label>
+            <label for="usernameo">Username :</label>
             <input type="text" id="usernameo" name="usernameo" required>
             <label for="email">Email :</label>
             <input type="email" id="email" name="email" required>
