--- a/add_artist.html
+++ b/add_artist.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Music Preferences</title>
         <link rel="stylesheet" href="form.css">
+        <link rel="icon" type="image/png" href="favicon-32x32.png"> <!-- Add favicon link -->
         <!-- Include jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <!-- Include jQuery UI -->
